# MedNES

./: settings.gradle
.github/workflows/: android_build.yml
.github/workflows/.github/workflows/: generate_source.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/Core/: 6502.cpp  6502.hpp  APU.cpp  APU.hpp  Controller.hpp  PPU.cpp  PPU.hpp
app/src/main/cpp/Core/Common/: FakeSDL.hpp
app/src/main/java/com/mednes/android/: AspectSurfaceView.kt  MainActivity.kt  MedNESJni.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
